# laughloop

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
app/backend/: pyproject.toml  requirements.txt  server.py  vercel.json
app/frontend/: App.jsx  index.html  main.jsx  next.config.ts  package-lock.json  package.json
app/frontend/src/app/: globals.css  layout.tsx  page.tsx
app/frontend/src/app/admin/: page.tsx
app/frontend/src/app/evals/: page.tsx
app/frontend/src/components/: chat-input.tsx  chat-message.tsx  empty-state.tsx  haha-button.tsx  header.tsx  log-viewer.tsx  pipeline-panel.tsx  stats-bar.tsx  typing-indicator.tsx
app/frontend/src/lib/: api.ts
configs/: rl.toml
environments/laughloop_reward/: README.md  laughloop_reward.py  pyproject.toml
environments/math_group/.prime/: .env-metadata.json
environments/swe_grep/: README.md  inspect_latest.py  inspect_results.py  inspect_results2.py  inspect_results3.py  pyproject.toml  swe_grep.py
environments/swe_grep/.prime/: .env-metadata.json
environments/swe_grep/configs/: rl.toml
environments/swe_grep/src/: create_dataset.py  sandbox_metrics.py
environments/tau2_bench/.prime/: .env-metadata.json
pipeline/: export_batch.py  seed_data.py
scripts/: deploy_adapter.py  loop.sh
