[project]
name = "laughloop"
version = "0.1.0"
description = "Continual Learning Comedy AI — gets funnier over time via online RL"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "openai>=1.50.0",
    "datasets",
    "prime",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
