[project]
name = "laughloop-backend"
version = "0.1.0"
description = "LaughLoop Backend — FastAPI server for chat + feedback collection"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "boto3>=1.35.0",
]

[project.scripts]
app = "server:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
