[project]
name = "laughloop-reward"
version = "0.2.0"
description = "RL environment for training funnier AI responses using human humor feedback"
tags = ["humor", "single-turn", "rlhf", "feedback", "train"]
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8",
    "datasets",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["laughloop_reward.py"]

[tool.verifiers.eval]
num_examples = 20
rollouts_per_example = 3
