[project]
name = "swe-grep"
description = "Your environment description here"
tags = ["placeholder-tag", "train", "eval"]
version = "0.2.2"
requires-python = ">=3.10"
dependencies = [
    "tenacity>=9.1.2",
    "verifiers>=0.1.9.post3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["swe_grep.py", "pyproject.toml", "src"] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
